--- a/client/app.html
+++ b/client/app.html
@@ -9,16 +9,16 @@
 <body>
 <div class="img"></div>
 <form class="form">
-	<h2>Applicant Income (EUR)</h2>
+	<label>Applicant Income (EUR)</label>
     <input class="income"  type="text" id="uiAppInc" class="floatLabel" name="AppInc" value="0.0">
-	<h2>Coapplicant Income (EUR)</h2>
+	<label>Coapplicant Income (EUR)</label>
     <input class="income"  type="text" id="uiCoappInc" class="floatLabel" name="CoAppInc" value="0.0">
 	</form>
 
 <form class="form">
-	<h2>Loan Amount (EUR)</h2>
+	<label>Loan Amount (EUR)</label>
     <input class="income"  type="text" id="uiLoanAmt" class="floatLabel" name="LoanAmt" value="0.0">
-    <h2>Loan Term </h2>
+    <label>Loan Term</label>
 	<div>
 		<select class="term" name="" id="uiLoanTrm">
     <option value="" disabled="disabled" selected="selected">Choose a Loan Term</option>
@@ -27,7 +27,7 @@
 		</select>
 	</div>
 
-	<h2>Did you reimburse your old debts?</h2>
+	<label>Did you reimburse your old debts?</label>
 	<div class="switch-field">
 		<input type="radio" id="radio-credit-0" name="uiCredit" value="0" checked/>
 		<label for="radio-credit-0">Not Yet</label>
